fix: fixing cv button and profile image

--- a/src/i18n/locales/pt/about-me.json
+++ b/src/i18n/locales/pt/about-me.json
@@ -3,5 +3,6 @@
     "i-am": "Sou",
     "position": "Desenvolvedor Full Stack",
     "about-me": "Desde 2018 na área de tecnologia, minha paixão é criar soluções criativas e eficazes para problemas complexos de negócios usando tecnologias de ponta. Eu sou um profissional motivado e colaborativo, que adora trabalhar em equipe para alcançar objetivos ambiciosos.",
-    "my-skills": "Minhas Habilidades"
+    "my-skills": "Minhas Habilidades",
+    "cv": "Abrir CV"
 }
