fix: fixing resume about me

--- a/src/i18n/locales/en/about-me.json
+++ b/src/i18n/locales/en/about-me.json
@@ -2,7 +2,7 @@
     "title": "About Me",
     "i-am": "I'm",
     "position": "Full Stack Developer",
-    "about-me": "Since 2018 in the area of technology, my passion is to create solutions creative and effective for complex business problems using state-of-the-art technologies. I am a motivated professional and collaborative, who loves to work as a team to achieve goals ambitious.",
+    "about-me": "Since 2018 in the technology area, I am a highly motivated Full Stack Developer. I have a solid knowledge in all stages of software development, from conception to deployment. I am passionate about web development and am always looking to improve my skills and knowledge in emerging technologies.",
     "my-skills": "My Skills",
     "cv": "Open CV"
 }
