--- a/src/i18n/locales/pt/about-me.json
+++ b/src/i18n/locales/pt/about-me.json
@@ -2,7 +2,7 @@
     "title": "Sobre Mim",
     "i-am": "Sou",
     "position": "Desenvolvedor Full Stack",
-    "about-me": "Desde 2018 na área de tecnologia, minha paixão é criar soluções criativas e eficazes para problemas complexos de negócios usando tecnologias de ponta. Eu sou um profissional motivado e colaborativo, que adora trabalhar em equipe para alcançar objetivos ambiciosos.",
+    "about-me": "Desde 2018 na área de tecnologia, sou Desenvolvedor Full Stack altamente motivado. Tenho um sólido conhecimento em todas as etapas do desenvolvimento de software, desde a concepção até a implantação. Sou apaixonado por desenvolvimento web e estou sempre em busca de aprimorar minhas habilidades e conhecimentos em tecnologias emergentes.",
     "my-skills": "Minhas Habilidades",
     "cv": "Abrir CV"
 }
