--- a/src/i18n/locales/pt/projects.json
+++ b/src/i18n/locales/pt/projects.json
@@ -4,6 +4,7 @@
     "view-repository": "Ver Repositório",
     "view-website": "Ver Website",
     "see-more": "Ver mais projetos",
+    "Genius": "Site feito para explorar o poder das IA's, podendo convesar, gerar código, imagens, vídeos e músicas, também inclui um plano PRO para usar a ferramenta de forma ilimitada.",
     "Project-Manager": "Projeto com intuito de gerenciar seus projetos pessoais inserindo foto de capa, titulo, descrição, links de redirecionameto, atualização e deleção de um projeto para uso próprio no seu portfolio pessoal.",
     "Timeline": "Projeto para criar uma linha do tempo pessoal, nele é possivel fazer login com GitHub, inserir imagem de capa, escrever uma descrição para memória e tornar a memoria publica, isso possibilita o dono da memória compartilha-la com outra pessoa.",
     "Airbnb": "Clone do site do Airbnb, permite fazer login com Google, GitHub e com credenciais, também é possivel disponibilizar um imóvel próprio para ser alugado, realizar a reserva de um imóvel, diversos filtros por categoria e deleção de um imóvel.",
